# LED-topology

./: .gitignore  DEPENDENCIES.md  activate.sh  pyproject.toml  requirements.txt
arduino/ltp_octo_v2/: README.md  config.h  led_driver_octo.h  ltp_octo_v2.ino  ltp_octo_v2_teensy32.hex  protocol.h
arduino/ltp_serial_v2/: Makefile  README.md  led_driver.h  led_driver_apa102.h  led_driver_lpd8806.h  led_driver_ws2812.h  ltp_serial_v2.ino  protocol.cpp
configs/: controller-example.yaml  sink-example.yaml  source-example.yaml
docs/: serial-sink-setup.md
spec/: .protocol.md.swp  artnet-sink-plan.md  implementations.md  media-source-plan.md  protocol.md  scalar-data-extension.md  section-routing.md  serial-protocol-v2.md  serial-sink.md  virtual-sources.md
src/libltp/: __init__.py  controls.py  discovery.py  protocol.py  topology.py  transport.py  types.py
src/ltp_artnet/: __init__.py  __main__.py  cli.py  protocol.py  sender.py  sink.py
src/ltp_controller/: __init__.py  __main__.py  cli.py  controller.py  palettes.py  router.py  sink_control.py
src/ltp_controller/scalar_sources/: __init__.py  base.py  sensors.py
src/ltp_controller/virtual_sources/: __init__.py  base.py  monitors.py  patterns.py  visualizers.py
src/ltp_controller/web/: __init__.py  app.py
src/ltp_controller/web/static/css/: style.css
src/ltp_controller/web/static/js/: app.js
src/ltp_controller/web/templates/: base.html  dashboard.html  preview.html  routes.html  scalar_sources.html  sinks.html  sources.html  virtual_sources.html
src/ltp_media_source/: __init__.py  __main__.py  cli.py  source.py
src/ltp_media_source/inputs/: __init__.py  base.py  camera.py  gif.py  image.py  screen.py  video.py
src/ltp_media_source/processing/: __init__.py  color.py  scaler.py
src/ltp_serial_cli/: README.md  __init__.py  __main__.py  exceptions.py  protocol.py
src/ltp_serial_sink/: __init__.py  __main__.py  cli.py  serial_renderer.py  sink.py  v2_renderer.py
src/ltp_sink/: __init__.py  __main__.py  cli.py  sink.py
src/ltp_sink/renderers/: __init__.py  base.py  terminal.py
src/ltp_sink_serial/: README.md  __init__.py  __main__.py  device.py
src/ltp_source/: __init__.py  __main__.py  cli.py  source.py
src/ltp_source/patterns/: __init__.py  base.py  chase.py  fire.py  gradient.py  plasma.py  rainbow.py  solid.py
